--- a/dynamic-data-mapping-web/src/main/resources/META-INF/resources/edit_template_display.jspf
+++ b/dynamic-data-mapping-web/src/main/resources/META-INF/resources/edit_template_display.jspf
@@ -24,7 +24,12 @@ if (Validator.isNotNull(scriptContent)) {
 
 <aui:input name="scriptContent" type="hidden" value="<%= script %>" />
 
-<liferay-ui:panel-container extended="<%= true %>" id="templateScriptContainer" markupView="lexicon" persistState="<%= true %>">
+<liferay-ui:panel-container
+	extended="<%= true %>"
+	id="templateScriptContainer"
+	markupView="lexicon"
+	persistState="<%= true %>"
+>
 	<liferay-ui:panel collapsible="<%= true %>" extended="<%= true %>" id="templateScriptSectionPanel" markupView="lexicon" persistState="<%= true %>" title="script">
 		<div class="form-group lfr-template-editor-container">
 			<c:if test="<%= ddmDisplayContext.isAutocompleteEnabled(language) %>">
